Create `ft` and `emulator` local packages

--- a/test/DOM_v3/ft/pubspec.yaml
+++ b/test/DOM_v3/ft/pubspec.yaml
@@ -1,14 +1,10 @@
-name: test_DOM
-description: My dart first app
+name: ft
+description: Dart ft library
 version: 0.0.1
 environment:
   sdk: '>=1.13.0 <2.0.0'
-dependencies:
-  browser: ^0.10.0
-  ft:
-    path: ./ft
-  emulator:
-    path: ./emulator
+# dependencies:
+  # browser: ^0.10.0
 transformers:
 - $dart2js:
     checked: true
