--- a/test/DOM_v3/pubspec.yaml
+++ b/test/DOM_v3/pubspec.yaml
@@ -12,6 +12,6 @@ dependencies:
 transformers:
 - $dart2js:
     checked: true
-    commandLineOptions: [--enable-diagnostic-colors]
+    commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings]
     # analyze-all: true
     # minify: true
