Update DOM_V3 Add {other, video}registers debug Add `--assert-message` flag to dart2js in main pubspec.yaml

--- a/test/DOM_v3/pubspec.yaml
+++ b/test/DOM_v3/pubspec.yaml
@@ -12,6 +12,6 @@ dependencies:
 transformers:
 - $dart2js:
     checked: true
-    commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings]
+    commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
     # analyze-all: true
     # minify: true
