--- a/test/DOM_v3/emulator/pubspec.yaml
+++ b/test/DOM_v3/emulator/pubspec.yaml
@@ -3,6 +3,9 @@ description: GBmu emulator running on an Isolate
 version: 0.0.1
 environment:
   sdk: '>=1.13.0 <2.0.0'
+dependencies:
+  ft:
+    path: ../ft
 transformers:
 - $dart2js:
     checked: true
