Update DOM_v3   Remove parameter 2 offt/iterTableRows   Add more flags to ft/pubspec/dart2js   Rewrite code in web/debugger/registers.dart, add flags

--- a/test/DOM_v3/ft/pubspec.yaml
+++ b/test/DOM_v3/ft/pubspec.yaml
@@ -8,6 +8,6 @@ environment:
 transformers:
 - $dart2js:
     checked: true
-    commandLineOptions: [--enable-diagnostic-colors]
+    commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
     # analyze-all: true
     # minify: true
