Major changes   Add `emulator/lib/src/worker_observer.dart`   Add `ft/lib/src/debug.dart`   Merge `ft/lib/src/{enum, iter, html}.dart`   Improve log with `Ft.log`   Move clock speed updates to `worker_observer`

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 transformers:
 - $dart2js:
     checked: true
+    environment:
+      FTLOG: 'true'
     commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
     # analyze-all: true
     # minify: true
