Major changes   Add `emulator/lib/src/filedb/filedb.dart`   `DatabaseProxy.addRom` fully functionnal

--- a/test/collapsable/pubspec.yaml
+++ b/test/collapsable/pubspec.yaml
@@ -14,6 +14,6 @@ transformers:
     checked: true
     environment:
       FTLOG: 'true'
-    commandLineOptions: [--enable-diagnostic-colors, --assert-message]
+    commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
     # analyze-all: true
     # minify: true
