--- a/emulator/pubspec.yaml
+++ b/emulator/pubspec.yaml
@@ -8,7 +8,7 @@ dependencies:
     path: ../ft
 transformers:
 - $dart2js:
-    checked: false
+    checked: true
     # minify: true
     commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
     # analyze-all: true
