--- a/dart/localstorage/pubspec.yaml
+++ b/dart/localstorage/pubspec.yaml
@@ -5,11 +5,13 @@ environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
   browser: ^0.10.0
+  ft:
+    path: ./ft
 transformers:
 - $dart2js:
     checked: true
     # analyze-all: true
     # minify: true
-    # environment:
-      # FTLOG: 'true'
+    environment:
+      FTLOG: 'true'
     commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
