--- a/test/mixin_components/tmuxp.yaml
+++ b/test/mixin_components/tmuxp.yaml
@@ -6,9 +6,11 @@
 #    By: ngoguey <ngoguey@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/09/30 13:47:38 by ngoguey           #+#    #+#              #
-#    Updated: 2016/09/30 13:51:27 by ngoguey          ###   ########.fr        #
+#    Updated: 2016/09/30 13:55:37 by ngoguey          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
+# tmux kill-session -t 'GBmu' ; tmuxp load ./tmuxp.yaml
 
 session_name: 'GBmu'
 shell_command_before: "cd ${PWD}"
