--- a/test/mixin_components/tmuxp.yaml
+++ b/test/mixin_components/tmuxp.yaml
@@ -6,11 +6,12 @@
 #    By: ngoguey <ngoguey@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/09/30 13:47:38 by ngoguey           #+#    #+#              #
-#    Updated: 2016/09/30 13:55:37 by ngoguey          ###   ########.fr        #
+#    Updated: 2016/10/01 15:22:54 by ngoguey          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # tmux kill-session -t 'GBmu' ; tmuxp load ./tmuxp.yaml
+# http://tmuxp.readthedocs.io/en/latest/examples.html
 
 session_name: 'GBmu'
 shell_command_before: "cd ${PWD}"
@@ -24,27 +25,36 @@ environment:
   CDC: ./component_system/lib/src/controllers_dom_components
 windows:
 - window_index: 0
+  window_name: main
   layout: main-vertical
   panes:
     - ps -W | ack -i 'dart.exe' | sed -e 's/^[ \t]*//' | cut -d' ' -f1 | xargs kill -f ; pub get ; pub serve
     - emacs $CS/init.dart README.md
 - window_index: 1
+  window_name: includes
   panes: [e $CS/include_*.dart]
 - window_index: 2
+  window_name: small classes
   panes: ['e $CS/*{variants,local_storage_compo}*.dart']
 
 - window_index: 3
+  window_name: platform dom compo
   panes: ['e $CDC/platform_dom_compo*.dart']
 - window_index: 6
+  window_name: platforms events
   panes: ['e $CDC/platform_*events*.dart']
 
 - window_index: 4
+  window_name: cdc handlers
   panes: ['e $CDC/handler_*{visib,drag_drop,top_level}*.dart']
 
 
 - window_index: 7
+  window_name: mixins_
   panes: [e $DC/mixin_*.dart]
 - window_index: 8
+  window_name: html drop drag
   panes: ['e $DC/html_{dropzone,draggable}*.dart']
 - window_index: 9
+  window_name: html elements
   panes: ['e $DC/html_*{cart,simple}*.dart']
