--- a/test/mixin_components/tmuxp.yaml
+++ b/test/mixin_components/tmuxp.yaml
@@ -6,7 +6,7 @@
 #    By: ngoguey <ngoguey@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/09/30 13:47:38 by ngoguey           #+#    #+#              #
-#    Updated: 2016/10/01 17:14:04 by ngoguey          ###   ########.fr        #
+#    Updated: 2016/10/04 19:07:36 by ngoguey          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -62,10 +62,10 @@ windows:
 
 - window_index: 4
   window_name: cdc handlers
-  panes: ['e $CDC/handler_*{visib,drag_drop}*.dart']
+  panes: ['e $CDC/platform_cart(|_parts).dart']
 - window_index: 5
   window_name: cdc handlers
-  panes: ['e $CDC/handler_*catalyst*.dart']
+  panes: ['e $CDC/handler_*catalyst*.dart $CDC/platform_dom_dragged.dart']
 
 
 - window_index: 7
