--- a/ft/pubspec.yaml
+++ b/ft/pubspec.yaml
@@ -9,5 +9,7 @@ transformers:
 - $dart2js:
     checked: true
     # minify: true
+    environment:
+      FTLOG: 'true'
     commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
     # analyze-all: true
