Major changes   Merged `test/mixin_components` to `./`, component system functional

--- a/component_system/pubspec.yaml
+++ b/component_system/pubspec.yaml
@@ -5,7 +5,7 @@ environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
   ft:
-    path: ../../../ft
+    path: ../ft
 transformers:
 - $dart2js:
     checked: true
