Minor changes   Update/duplicate/rename tmuxp.yaml   Remove directory main_space   Unify pubspec.yaml

--- a/component_system/pubspec.yaml
+++ b/component_system/pubspec.yaml
@@ -6,7 +6,11 @@ environment:
 dependencies:
   ft:
     path: ../ft
+  emulator:
+    path: ../emulator
 transformers:
 - $dart2js:
     checked: true
-    commandLineOptions: [--enable-diagnostic-colors]
+    # minify: true
+    commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
+    # analyze-all: true
