--- a/tmuxp_gbmu.yaml
+++ b/tmuxp_gbmu.yaml
@@ -6,7 +6,7 @@
 #    By: ngoguey <ngoguey@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/09/30 13:47:38 by ngoguey           #+#    #+#              #
-#    Updated: 2016/10/09 18:08:31 by ngoguey          ###   ########.fr        #
+#    Updated: 2016/10/13 17:40:58 by ngoguey          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -61,7 +61,7 @@ windows:
   panes: ['e ./emulator/lib/{constants,emulator,enums,variants}.dart']
 
 - window_index: 4
-  panes: ['e $EMU/{emulator,worker,worker_emulation}.dart']
+  panes: ['e $EMU/{emulator,worker,worker_emulation,worker_emulation_state}.dart']
 - window_index: 5
   panes: ['e $EMU/worker_{debug,observer}.dart $EMU/worker/*.dart']
 - window_index: 6
