--- a/tmuxp_gbmu.yaml
+++ b/tmuxp_gbmu.yaml
@@ -6,7 +6,7 @@
 #    By: ngoguey <ngoguey@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/09/30 13:47:38 by ngoguey           #+#    #+#              #
-#    Updated: 2016/10/13 17:40:58 by ngoguey          ###   ########.fr        #
+#    Updated: 2016/10/14 14:20:19 by ngoguey          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -145,7 +145,7 @@ windows:
 
 - window_index: 103
   window_name: platform dom compo
-  panes: ['e $CDC/platform_dom.dart $CS/*file_adm*.dart']
+  panes: ['e $CDC/platform_dom.dart $CS/*file_adm*.dart $CS/*handler_global_styles*.dart']
 - window_index: 106
   window_name: platforms events
   panes: ['e $CDC/platform_*events*.dart $CDC/platform_dom_component_storage.dart']
