Save state functional in DOM, worker and idb
  Add `component_system/cs.dart`, will handle key events from dom
  Update `web/keyboard.dart` with component_system keys
  Fix few bugs from previously dead code
  Split `emulator/worker_emulation.dart` once more with `worker_emulation_iddb.dart`
  Rename `EventExtractRam` to `EventIdb`

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,11 @@ dependencies:
     path: ./component_system
 transformers:
 - $dart2js:
+    $exclude: test
     checked: true
     # minify: true
+    sourceMaps: true
+    verbose: true
     environment:
       FTLOG: 'true'
     commandLineOptions: [--enable-diagnostic-colors, --show-package-warnings, --assert-message]
