--- a/tmuxp_gbmu.yaml
+++ b/tmuxp_gbmu.yaml
@@ -6,7 +6,7 @@
 #    By: ngoguey <ngoguey@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/09/30 13:47:38 by ngoguey           #+#    #+#              #
-#    Updated: 2016/10/18 14:03:59 by ngoguey          ###   ########.fr        #
+#    Updated: 2016/10/19 18:07:57 by ngoguey          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -62,19 +62,19 @@ windows:
 - window_index: 3
   panes: ['e ./emulator/lib/src/events.dart']
 
+- window_index: 7
+  panes: ['e $EMU/{worker_emulation,worker_emulation_state,worker_emulation_iddb}.dart']
 - window_index: 4
-  panes: ['e $EMU/{emulator,worker,worker_emulation,worker_emulation_state}.dart']
+  panes: ['e $EMU/{emulator,worker}.dart']
 - window_index: 5
   panes: ['e $EMU/worker_{debug,observer}.dart $EMU/worker/*.dart']
 - window_index: 6
   panes: ['e $EMU/{constants,enums,variants,globals}.dart']
 
-- window_index: 7
-  panes: ['e $WEB/nav.dart']
 - window_index: 8
-  panes: ['e $WEB/{alerts,canvas,keyboard}.dart']
+  panes: ['e $WEB/nav.dart $OPT/*.dart']
 - window_index: 9
-  panes: ['e $OPT/*.dart']
+  panes: ['e $WEB/{alerts,canvas,keyboard}.dart']
 
 # GAMEBOY ******************************************************************* **
 - window_index: 14
@@ -112,7 +112,7 @@ windows:
   window_name: main
   layout: main-vertical
   panes:
-    - emacs $CS/init.dart README.md
+    - "emacs $CS/{init,cs}.dart README.md $CS/../*.dart"
 - window_index: 101
   window_name: includes
   panes: [e $CS/include_*.dart]
@@ -122,7 +122,7 @@ windows:
 
 - window_index: 103
   window_name: platform dom compo
-  panes: ['e $CDC/platform_dom.dart $CS/*file_adm*.dart $CS/*handler_global_styles*.dart']
+  panes: ['e $CDC/platform_dom.dart $CS/*file_adm*.dart $CS/*handler_global_styles*.dart $CDC/platform_emulator_contacts.dart']
 - window_index: 106
   window_name: platforms events
   panes: ['e $CDC/platform_*events*.dart $CDC/platform_dom_component_storage.dart']
